# tectogen

./: .gitignore  .gitmodules  .woodpecker.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
res/shaders/: chess.frag  colorful.frag  invert.frag  main.frag  mirror.frag  pink.frag  rainbow.frag  test.frag  twist.frag
src/: app.cpp  app.h  asynctex.cpp  asynctex.h  audioconfigwindow.cpp  audioconfigwindow.h  config.cpp  config.h  console.cpp  console.h  context.cpp  context.h  displaypayload.h  imconfig.h  instreammanager.cpp  instreammanager.h  jettools.h  logs.cpp  logs.h  main.cpp  monitoring.h  monitoringwindow.cpp  monitoringwindow.h  multibuffer.cpp  multibuffer.h  nodegraph.cpp  nodegraph.h  nodeprogramapi.h  nodeprograminstancewrapper.cpp  nodeprograminstancewrapper.h  nodeprogramlibrary.cpp  nodeprogramlibrary.h  nodeprogrammanager.cpp  nodeprogrammanager.h  nodeprogrammetadata.h  nodewindow.cpp  nodewindow.h  profiler.cpp  profiler.h  ringbuffer.h  (+17 more)
